<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/str_auto"/>

        <Switch android:id="@+id/autoSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:checked="true"/>

        <Button
            android:id="@+id/recStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/str_rec_on"/>

        <Button
            android:id="@+id/recStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/str_rec_off"/>

        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/str_return"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/str_say_vol"
        android:textColor="@color/colorWhite"/>

    <SeekBar
        android:id="@+id/saySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/str_say"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/str_say_hint2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/msgEditText"
            android:layout_width="0dip"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:inputType="text"
            android:maxLength="2000"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/action_add"
            android:drawableLeft="@android:drawable/ic_menu_add"/>

        <!-- free版 -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/view_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_say_edit_hint"/>


    <ListView
        android:id="@+id/sayListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/view_margin"/>

</LinearLayout>
